--- a/lesson3.html
+++ b/lesson3.html
@@ -47,7 +47,7 @@
         {
             margin-left: 10px;
         }
-        .menu>li>a
+        .menu>li>a:visited,
         {
             background-color: white;
             color: #990011;
