--- a/lesson3.html
+++ b/lesson3.html
@@ -47,7 +47,7 @@
         {
             margin-left: 10px;
         }
-        .menu>li>a:visited,
+        .menu>li
         {
             background-color: white;
             color: #990011;
@@ -57,7 +57,47 @@
             text-decoration: none;
 
         }
+        #pagecontent
+        {
+            padding: 20px 60px;
+        }
+        #pagecontent>article {
+            border: 1px solid #990011;
+            margin-bottom: 20px;
+            box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+        }
 
+        
+        #pagecontent>article>header {
+            background-color: #990011;
+            padding: 20px;
+        }
+        #pagecontent>article>header>h2
+        {
+            color: white;
+            text-transform: uppercase;
+        }
+        #pagecontent>article>div>p
+        {
+            padding: 0px 0px 0px 20px;
+            text-indent: 50px;
+            text-align: justify;
+            line-height: 150%;
+            word-spacing: 5px;
+            
+
+        }
+        #pagecontent>article>div>img
+        {
+            border-radius: 300px;
+            box-shadow: 5px 5px 5px gray;
+        }
+        #pagecontent>article>footer
+        {
+            background-color:  #990011;
+            color: white;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
