--- a/lesson3.html
+++ b/lesson3.html
@@ -104,6 +104,11 @@
             border-radius: 300px;
             box-shadow: 5px 5px 5px gray;
         }
+        /* #pagecontent>article>div>img:hove
+        {
+            transform: rotatey(360deg);
+            filter:grayscale(0%);
+        } */
         #pagecontent>article>footer
         {
             background-color:  #990011;
